--- a/helsing.html
+++ b/helsing.html
@@ -91,7 +91,7 @@
     </div>
 
     <audio autoplay>
-      <source src="music.mp3" type="audio/mpeg">
+      <source src="helsing-love.mp3" type="audio/mpeg">
       Ваш браузер не поддерживает аудио или произошла ошибка сайта.
     </audio>
     
