--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div id="particles-js"></div>
     <div class="content">
         <img src="helsing.jpg" alt="helsing" class="round">
-        <h1>helsing maniacally</h1>
+        <h1> helsing </h1>
         <p>+888 0347 1605 - terrorist</p>
         <a href="https://t.me/ybuqqxxdd" target="_blank" style="color: #5044bb; font-size: 24px;"><i class="fab fa-telegram"></i></a>
         <a href="https://t.me/CharliesRu" target="_blank" style="color: #5044bb; font-size: 24px;"><i class="fab fa-telegram"></i></a>
